# osint_alert_bot

./: .env.example  .gitignore  README.md  backend.py  config.py  dashboard_history.json  dork_generator.py  index.html  main.py  monitor.py  requirements.txt  state_manager.py  summarizer.py  tg_controller.py
.github/workflows/: release.yml
backend/: backend.py  db.py  dork_generator.py  notifier.py
scripts/: arch-setup.sh  build_backend.sh  debug-checklist.md
src/: index.html  tauri-bridge.js
src-tauri/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
